@@ -1,4 +1,4 @@
-webapp/WEB-INF/rets/rets-config.xml
-webapp/WEB-INF/rets/rets-logging.properties
+variman/WEB-INF/rets/rets-config.xml
+variman/WEB-INF/rets/rets-logging.properties
 **/*.so
 **/*.dll
