@@ -20,7 +20,7 @@ MinVersion=0,4
 Compression=@COMPRESSION@
 
 [Files]
-Source: "*"; Excludes: "\webapp\WEB-INF\rets\rets-config.xml,\webapp\WEB-INF\rets\rets-logging.properties,\logs\%"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs; Check: StopVarimanService
+Source: "*"; Excludes: "\variman\WEB-INF\rets\rets-config.xml,\variman\WEB-INF\rets\rets-logging.properties,\logs\%"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs; Check: StopVarimanService
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Dirs]
@@ -158,8 +158,8 @@ var lib: String;
 var classes: String;
 begin
   if CurStep = ssInstall then begin
-    lib := ExpandConstant('{app}') + '\webapp\WEB-INF\lib'
-    classes := ExpandConstant('{app}') + '\webapp\WEB-INF\classes'
+    lib := ExpandConstant('{app}') + '\variman\WEB-INF\lib'
+    classes := ExpandConstant('{app}') + '\variman\WEB-INF\classes'
     DelTree(lib, True, True, True);
     DelTree(classes, True, True, True);
   end;
